# flakes

./: flake.nix
python/: pyproject.toml
python-pipenv/: flake.nix
rust/: flake.nix
