[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "sample_package" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.382.post1"

[tool.pyright]
include = ["."]
python.analysis.typeCheckingMode = "strict"
reportReturnType = "error"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
